--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
         async function getTextArea(pdfBytes,i) {
             const {data, canvaswidth, canvasheight, pageWidth, pageHeight} = await getImageData(pdfBytes,i);
-            const findRange=l=>{const m=Math.max.apply(null, l); l.forEach((x,i)=>{l[i]=x/m;});return[(l.findIndex(x=>x>0.1)-0.4)/l.length,(l.findLastIndex(x=>x>0.1)+1+0.4)/l.length]};
+            const findRange=l=>{const m=Math.max.apply(null, l); l.forEach((x,i)=>{l[i]=x/m;});return[Math.max(0,(l.findIndex(x=>x>0.1)-0.4)/l.length),Math.min(1,(l.findLastIndex(x=>x>0.1)+1+0.4)/l.length)]};
 
             const rowSum = new Array(canvasheight).fill(0);
             for (let hi = 0; hi < canvasheight; hi += 1) {
@@ -331,12 +331,14 @@
             return [x0, x1, pageHeight-y1, pageHeight-y0]; // y coords reversed because canvas is top down and pdf is bottom up
         };
         async function addPage(pdf, page){
+            if(!page) return;
             const {width, height} = page.getSize();
             const newPage = pdf.addPage([width, height]);
             const embeddedPage = await pdf.embedPage(page);
             newPage.drawPage(embeddedPage, {x: 0, y: 0, width, height});
         }
         async function collage(size, pages, ops){
+            if (pages.every(x=>!x)) return null;
             const newPdfDoc = await PDFDocument.create();
             const newPage = newPdfDoc.addPage(size);
             for (let i = 0; i < pages.length; i += 1) {
@@ -349,6 +351,7 @@
             return newPage;
         }
         async function cropPdfPage(page, x0, x1, y0, y1) {
+            if (!page) return null;
             const { width, height } = page.getSize();
             const k = Math.max((x1-x0)/width, (y1-y0)/height);
             return collage([width*k, height*k], [page], [{
@@ -359,6 +362,7 @@
             }]);
         }
         async function addMargin(page, margin){
+            if (!page) return null;
             const {width, height} = page.getSize();
             return collage([width, height],[page], [{
                 x: margin,
@@ -372,11 +376,8 @@
             const inputPdf = await PDFDocument.load(inputPdfBytes);
             const outputPdf = await PDFDocument.create();
             const inpages = inputPdf.getPages();
-            const {width, height} = inpages[0].getSize();
             const N = inpages.length;
-
-            const nw = 595.28;  // A4 width in points
-            const nh = 841.89;  // A4 height in points
+            const [nw,nh] = [595.28, 841.89];  // A4 size in points
 
             const Ne = N + ((shrink * 2) - N % (shrink * 2)) % (shrink * 2);
             const nN = Ne / shrink;
@@ -398,32 +399,20 @@
 
             if (shrink === 4) {
                 indicesFunc = (i) => {
-                    const l = [Ne-1-i, i, nN*3-1-i, nN+i];
-                    if (i % 2 === 1) return [l[1], l[0], l[3], l[2]];
+                    const l = [Ne-1-i, nN*3-1-i, i, nN+i];
+                    if (i%2===1) return [l[2], l[3], l[0], l[1]];
                     return l;
                 };
                 transformFunc = (i) => {
-                    const offsetX = [0, 0.5, 0, 0.5];
-                    const offsetY = [0.5, 0.5, 0, 0];
+                    const offsetX = [0, 0, 0.5, 0.5];
+                    const offsetY = [0.5, 0, 0.5, 0];
                     return offsetX.map((x, i) => ({ rotation: 0, subwidth: nw/2, subheight: nh/2, offsetX: x, offsetY: offsetY[i] }));
                 };
             }
 
             if (shrink === 8) {
-                indicesFunc = (i) => {
-                    const l = [Ne-4-4*i, Ne-3-4*i, Ne-2-4*i, Ne-1-4*i, 0+4*i, 1+4*i, 2+4*i, 3+4*i];
-                    if (i % 2 === 1) return [l[3], l[2], l[1], l[0], l[7], l[6], l[5], l[4]];
-                    return l;
-                };
-                transformFunc = (i) => {
-                    const offsetX = i % 2 === 0
-                        ? [0.5, 0, 0.5, 0, 0.5, 0, 0.5, 0]
-                        : [1, 0.5, 1, 0.5, 1, 0.5, 1, 0.5];
-                    const offsetY = i % 2 === 0
-                        ? [1, 1, 0.75, 0.75, 0.5, 0.5, 0.25, 0.25]
-                        : [0.75, 0.75, 0.5, 0.5, 0.25, 0.25, 0, 0];
-                    return Array.from({length: 8}, (_, j) => ({ rotation: i%2===0?-90:90, subwidth: nh/4, subheight: nw/2, offsetX: offsetX[j], offsetY: offsetY[j] }));
-                };
+                const pdf4 = await bookscale(inputPdfBytes, 4, false, reduceGaps);
+                return await bookscale(pdf4, 2, isBook, false);
             }
 
             if (!isBook) {
@@ -456,9 +445,7 @@
                     return p;
                 }));
                 let newPage = await collage([nw, nh], pages, trans);
-                if (reduceGaps){
-                    newPage = await addMargin(newPage, 5)
-                }
+                if (reduceGaps){ newPage = await addMargin(newPage, 5) }
                 addPage(outputPdf, newPage);
                 const progress = Math.floor((i+1)/nN*100);
                 document.getElementById('progressBar').value = progress;
